# duru

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.bat  build.zig  duru.cxx  manifest.mf  project.duru
compiler/: module.duru
compiler/art/: compiler.lexer.source.duru  module.declarations.duru  module.resolution.duru  module.source.duru  module.tokens.duru
compiler/src/: lexer.duru
duru/: .project
duru/src/: module-info.java
home/: README.md
inc/: duru
inc/duru/: containers.hxx  diagnostic.h  initializer.hxx  launcher.h  text.hxx
initTest/: project.duru
initTest/src/: main.duru
inittest/: project.duru
inittest/art/: project.duru.lectics
inittest/src/: main.duru
libraries/duru/: module.duru
src/: CMakeLists.txt  arena.c  build.c  compiler.c  configuration.c  debug.c  diagnostic.c  duru.h  duru.hxx  files.c  initialize.c  initializer.c  initializer.zig  internal.h  launcher.cxx  main.c  main.cxx  main.zig  platform.c  platformWindows.c  projectConfiguration.c  string.c  stringList.c  stringView.c
src/duru/: CMakeLists.txt  Launcher.java  diagnostic.c  launcher.c
src/initializer/: initialize.cxx
test/returns2/: project.duru
testmodule/: module.duru
testmodule/art/: module.declarations.duru  module.node.duru  module.resolution.duru  module.source.duru  module.tokens.duru  target.duru  testmodule.c  testmodule.declarations.duru  testmodule.main.declarations.duru  testmodule.main.source.duru  testmodule.main.tokens.duru  (+1 more)
tests/: README.md  module.duru
walkthrough/: module.duru  project.duru
(+246 files in other folders)
